--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
 
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
-    <header class="section" id="header">
+    <!-- <header class="section" id="header">
         <div class="container">
-            <nav class="navbar navbar-expand-md fixed-top">
-                <div class="container">
-                    <a class="logo text-nowrap" href="#header">
-                        <!-- votre logo ou nom de votre entreprise . vous ne mettez rien ici  -->
-                    </a>
+            <nav class="navbar navbar-expand-md fixed-top">               
+                    <a class="logo text-nowrap" href="#header"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#collapsibleNavbar">
                         <span class="navbar-toggler-icon text-secondary"></span>
@@ -60,15 +57,14 @@
                             <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
+                    </div>                
             </nav>
         </div>
-    </header>
+    </header> -->
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <div class="content">
         <div class="wrapper">
-            <div class="content-profile">
+            <!-- <div class="content-profile">
                 <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
                 </div>
                 <div class="container content-profile-center">
@@ -110,7 +106,7 @@
                     <div class="bubble bubble--16"></div>
                 </div>
 
-            </div>
+            </div> -->
         </div>
         <!-- ---------------------------------------Partie socials------------------------------------------------- -->
         <div class="section social container wrapper" id="social">
@@ -646,7 +642,7 @@
         </section><!-- End Testimonials Section -->
 
         <!-- ======= contact Section ======= -->
-        <section class="section" id="contact">
+        <!-- <section class="section" id="contact">
             <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                 <div class="container">
                     <div class="cc-contact">
@@ -721,7 +717,8 @@
                     </div>
                 </div>
             </div>
-        </section><!-- End experiences Section -->
+        </section> -->
+        <!-- End experiences Section -->
     </div>
     <footer class="footer">
         <div class="container wrapper">
