--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
-    <!-- <header class="section" id="header">
+        <!-- ======= About Section ======= -->
         <div class="container">
             <nav class="navbar navbar-expand-md fixed-top">               
                     <a class="logo text-nowrap" href="#header"></a>
@@ -60,7 +60,7 @@
                     </div>                
             </nav>
         </div>
-    </header> -->
+    </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <div class="content">
         <div class="wrapper">
@@ -108,34 +108,40 @@
 
             </div> -->
         </div>
-        <!-- ---------------------------------------Partie socials------------------------------------------------- -->
-        <div class="section social container wrapper" id="social">
-            <div class="icon facebook">
-                <div class="tooltip">Facebook</div>
-                <span><i class="fab fa-facebook-f"></i></span>
+
+         <!-- ======= About Section ======= -->
+        <!-- <section class="section container">            
+            <div class="section social container wrapper" id="social">
+                <div class="icon facebook">
+                    <div class="tooltip">Facebook</div>
+                    <span><i class="fab fa-facebook-f"></i></span>
+                </div>
+                <div class="icon twitter">
+                    <div class="tooltip">Twitter</div>
+                    <span><i class="fab fa-twitter"></i></span>
+                </div>
+                <div class="icon instagram">
+                    <div class="tooltip">Instagram</div>
+                    <span><i class="fab fa-instagram"></i></span>
+                </div>
+                <div class="icon github">
+                    <div class="tooltip">Github</div>
+                    <span><i class="fab fa-github"></i></span>
+                </div>
+                <div class="icon youtube">
+                    <div class="tooltip">Youtube</div>
+                    <span><i class="fab fa-youtube"></i></span>
+                </div>
             </div>
-            <div class="icon twitter">
-                <div class="tooltip">Twitter</div>
-                <span><i class="fab fa-twitter"></i></span>
-            </div>
-            <div class="icon instagram">
-                <div class="tooltip">Instagram</div>
-                <span><i class="fab fa-instagram"></i></span>
-            </div>
-            <div class="icon github">
-                <div class="tooltip">Github</div>
-                <span><i class="fab fa-github"></i></span>
-            </div>
-            <div class="icon youtube">
-                <div class="tooltip">Youtube</div>
-                <span><i class="fab fa-youtube"></i></span>
-            </div>
-        </div>
-        <div class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
+        </section> -->
+          <!-- End Social Section -->
+
+        <!-- ======= About Section ======= -->
+        <!-- <section class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
             <div class="container ">
                 <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
-                        <img src="public/images/about.png" alt="about me" />
+                        <img class="img-fluid" src="public/images/about.png" alt="about me" />
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
 
@@ -178,10 +184,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- ---------------------------------------Partie Skills------------------------------------------------- -->
+        </section> -->
+          <!-- End About Section -->
+        
+        <!-- ======= Skills Section ======= -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
-        <div class="section" id="skills">
+        <!-- <section class="section" id="skills">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class=" card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -289,10 +297,11 @@
                 </div>
             </div>
 
-        </div>
-        <!-- ======= Portfolio Section ======= -->
+        </section> -->
+          <!-- End Skills Section -->
 
-        <section class="section  portfolio" id="portfolio">
+        <!-- ======= Portfolio Section ======= -->
+        <!-- <section class="section  portfolio" id="portfolio">
             <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
             <div class="container card">
                 <div class="mt-4 row" data-aos="fade-in">
@@ -473,9 +482,11 @@
 
 
 
-        </section><!-- End Portfolio Section -->
+        </section> -->
+        <!-- End Portfolio Section -->
+        
         <!-- ======= experiences Section ======= -->
-        <section class=" section" id="experiences">
+        <!-- <section class=" section" id="experiences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
@@ -548,10 +559,11 @@
                     </div>
                 </div>
             </div>
-        </section> <!-- End experiences Section -->
+        </section>  -->
+        <!-- End experiences Section -->
 
         <!-- ======= Testimonials Section ======= -->
-        <section class=" section testimonials section-bg" id="testimonials">
+        <!-- <section class=" section testimonials section-bg" id="testimonials">
             <div class="container mb-5">
                 <div class="text-center mb-3" data-aos="fade-in" data-aos-delay="100">
                     <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
@@ -639,7 +651,8 @@
                 </div>
 
             </div>
-        </section><!-- End Testimonials Section -->
+        </section> -->
+        <!-- End Testimonials Section -->
 
         <!-- ======= contact Section ======= -->
         <!-- <section class="section" id="contact">
@@ -720,7 +733,7 @@
         </section> -->
         <!-- End experiences Section -->
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container wrapper">
             <div class="icon facebook">
                 <div class="tooltip">Facebook</div>
@@ -751,7 +764,7 @@
             </div>
             <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i></a>
         </div>
-    </footer>
+    </footer> -->
 
 
     <!-- All script -->
