--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
         <!-- ======= About Section ======= -->
+    <header>
         <div class="container">
             <nav class="navbar navbar-expand-md fixed-top">               
                     <a class="logo text-nowrap" href="#header"></a>
@@ -58,14 +59,32 @@
                             </li>
                         </ul>
                     </div>                
-            </nav>
+            </nav> 
         </div>
     </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <div class="content">
         <div class="wrapper">
-            <!-- <div class="content-profile">
+            <div class="content-profile"> 
                 <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
+                    <div class="bubble-ocean"> 
+                        <div class="bubble bubble--1"></div>
+                        <div class="bubble bubble--2"></div>
+                        <div class="bubble bubble--3"></div>
+                        <div class="bubble bubble--4"></div>
+                        <div class="bubble bubble--5"></div>
+                        <div class="bubble bubble--6"></div>
+                        <div class="bubble bubble--7"></div>
+                        <div class="bubble bubble--8"></div>
+                        <div class="bubble bubble--9"></div>
+                        <div class="bubble bubble--10"></div>
+                        <div class="bubble bubble--11"></div>
+                        <div class="bubble bubble--12"></div>
+                        <div class="bubble bubble--13"></div>
+                        <div class="bubble bubble--14"></div>
+                        <div class="bubble bubble--15"></div>
+                        <div class="bubble bubble--16"></div>
+                    </div> 
                 </div>
                 <div class="container content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
@@ -87,26 +106,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="bubble-ocean">
-                    <div class="bubble bubble--1"></div>
-                    <div class="bubble bubble--2"></div>
-                    <div class="bubble bubble--3"></div>
-                    <div class="bubble bubble--4"></div>
-                    <div class="bubble bubble--5"></div>
-                    <div class="bubble bubble--6"></div>
-                    <div class="bubble bubble--7"></div>
-                    <div class="bubble bubble--8"></div>
-                    <div class="bubble bubble--9"></div>
-                    <div class="bubble bubble--10"></div>
-                    <div class="bubble bubble--11"></div>
-                    <div class="bubble bubble--12"></div>
-                    <div class="bubble bubble--13"></div>
-                    <div class="bubble bubble--14"></div>
-                    <div class="bubble bubble--15"></div>
-                    <div class="bubble bubble--16"></div>
-                </div>
+               
 
-            </div> -->
+            </div>
         </div>
 
          <!-- ======= About Section ======= -->
