--- a/index.html
+++ b/index.html
@@ -63,29 +63,9 @@
         </div>
     </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
-    <div class="content">
-        <div class="wrapper">
-            <div class="content-profile"> 
-                <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
-                    <div class="bubble-ocean"> 
-                        <div class="bubble bubble--1"></div>
-                        <div class="bubble bubble--2"></div>
-                        <div class="bubble bubble--3"></div>
-                        <div class="bubble bubble--4"></div>
-                        <div class="bubble bubble--5"></div>
-                        <div class="bubble bubble--6"></div>
-                        <div class="bubble bubble--7"></div>
-                        <div class="bubble bubble--8"></div>
-                        <div class="bubble bubble--9"></div>
-                        <div class="bubble bubble--10"></div>
-                        <div class="bubble bubble--11"></div>
-                        <div class="bubble bubble--12"></div>
-                        <div class="bubble bubble--13"></div>
-                        <div class="bubble bubble--14"></div>
-                        <div class="bubble bubble--15"></div>
-                        <div class="bubble bubble--16"></div>
-                    </div> 
-                </div>
+    <main class="content">
+        <div class="wrapper parallax-wrapper">
+            <div class="content-profile parallax">                
                 <div class="container content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
@@ -106,7 +86,24 @@
                         </div>
                     </div>
                 </div>
-               
+                <div class="bubble-ocean"> 
+                    <div class="bubble bubble--1"></div>
+                    <div class="bubble bubble--2"></div>
+                    <div class="bubble bubble--3"></div>
+                    <div class="bubble bubble--4"></div>
+                    <div class="bubble bubble--5"></div>
+                    <div class="bubble bubble--6"></div>
+                    <div class="bubble bubble--7"></div>
+                    <div class="bubble bubble--8"></div>
+                    <div class="bubble bubble--9"></div>
+                    <div class="bubble bubble--10"></div>
+                    <div class="bubble bubble--11"></div>
+                    <div class="bubble bubble--12"></div>
+                    <div class="bubble bubble--13"></div>
+                    <div class="bubble bubble--14"></div>
+                    <div class="bubble bubble--15"></div>
+                    <div class="bubble bubble--16"></div>
+                </div> 
 
             </div>
         </div>
@@ -734,7 +731,7 @@
             </div>
         </section> -->
         <!-- End experiences Section -->
-    </div>
+    </main>
     <!-- <footer class="footer">
         <div class="container wrapper">
             <div class="icon facebook">
@@ -775,10 +772,9 @@
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
     <!-- à supprimer en cas de non inutilité -->
-    <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
+    <!-- <script src="public/vendors/jquery/jquery.waypoints.min.js"></script> -->
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
-    <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
-    <script src="public/vendors/parallax.min.js"></script>
+    <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>   
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
 
     <script src="public/js/main.js"></script>
