--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
         <!-- ======= About Section ======= -->
-    <header>
-        <div class="container">
+    <header id="#header">
+        <!-- <div class="container">
             <nav class="navbar navbar-expand-md fixed-top">               
                     <a class="logo text-nowrap" href="#header"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -60,11 +60,35 @@
                         </ul>
                     </div>                
             </nav> 
-        </div>
+        </div> -->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="#header">OUMCREATION</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#experiences">EXPERIENCES</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <main class="content">
-        <div class="wrapper parallax-wrapper">
+        <!-- <div class="wrapper parallax-wrapper">
             <div class="content-profile parallax">                
                 <div class="container content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
@@ -106,10 +130,10 @@
                 </div> 
 
             </div>
-        </div>
+        </div> -->
 
-         <!-- ======= About Section ======= -->
-        <!-- <section class="section container">            
+         <!-- ======= Social Section ======= -->
+        <!-- <section class="section container">           
             <div class="section social container wrapper" id="social">
                 <div class="icon facebook">
                     <div class="tooltip">Facebook</div>
