--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
@@ -33,34 +32,7 @@
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
         <!-- ======= About Section ======= -->
-    <header id="#header">
-        <!-- <div class="container">
-            <nav class="navbar navbar-expand-md fixed-top">               
-                    <a class="logo text-nowrap" href="#header"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon text-secondary"></span>
-                    </button>
-                    <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#experiences">EXPERIENCES</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
-                            </li>
-                        </ul>
-                    </div>                
-            </nav> 
-        </div> -->
+    <header id="#header">       
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#header">OUMCREATION</a>
@@ -792,7 +764,7 @@
 
     <!-- All script -->
     <script src="public/vendors/jquery/jquery.min.js"></script>
-    <script src="public/vendors/bootstrap/popper-1.12.9.js"></script>
+    <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
     <!-- à supprimer en cas de non inutilité -->
