--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <main class="content ">
-        <div class="container wrapper parallax-wrapper">
-            <div class="content-profile parallax">
+        <div class=" wrapper parallax-wrapper">
+            <div class="container content-profile parallax">
                 <div class=" content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
