--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- ======= About Section ======= -->
 
     <header id="header" class="section ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container">
                 <a href="/" class="navbar-brand"></a>
                 <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="bubble-ocean">
+                <div class="bubble-ocean">
                     <div class="bubble bubble--1"></div>
                     <div class="bubble bubble--2"></div>
                     <div class="bubble bubble--3"></div>
@@ -107,10 +107,10 @@
                     <div class="bubble bubble--14"></div>
                     <div class="bubble bubble--15"></div>
                     <div class="bubble bubble--16"></div>
-                </div> -->
+                </div>
 
             </div>
-        </div>
+        </div> 
 
         <!-- ======= Social Section ======= -->
         <section class="section container">
