--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= experiences Section ======= -->
-        <!-- <section class=" section" id="experiences">
+        <section class=" section" id="experiences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
@@ -562,7 +562,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- End experiences Section -->
 
         <!-- ======= Testimonials Section ======= -->
