--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <!-- ======= Skills Section ======= -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
-        <section class="section" id="skills">
+        <!-- <section class="section" id="skills">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class=" card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -300,7 +300,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <!-- End Skills Section -->
 
         <!-- ======= Portfolio Section ======= -->
