--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <!-- ======= About Section ======= -->
 
     <header id="header" class="section ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning" id="mainNav">
             <div class="container">
                 <a href="/" class="navbar-brand"></a>
-                <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
+                <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse" id="navbar9">
+                <div class="navbar-collapse collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
                         </li>
@@ -489,7 +489,7 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= experiences Section ======= -->
-        <section class=" section" id="experiences">
+        <!-- <section class=" section" id="experiences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
@@ -562,7 +562,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End experiences Section -->
 
         <!-- ======= Testimonials Section ======= -->
