--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El
                         Obayid</span>
-                    <h3 class="category text-wrap">Intégratrice web, Développeuse Wordpress, et
+                    <h3 class="category">Intégratrice web, Développeuse Wordpress, et
                         webdesigner
                     </h3>
                     <div class="container twoButtons">
