--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 </head>
 
 <body>
-    <!-- ---------------------------------------Navbar------------------------------------------------ -->
-    <!-- ======= About Section ======= -->
+    <!-- ======= Header Section ======= -->
 
     <header id="header" class="section ">
         <nav class="navbar navbar-expand-lg navbar-light bg-warning" id="mainNav">
@@ -109,9 +108,8 @@
 
 
     </header>
-    <!-- ---------------------------------------profile------------------------------------------------ -->
+    <!-- ======= Main ======= -->
     <main class="content ">
-
 
         <!-- ======= Social Section ======= -->
         <section class="section container">
@@ -144,12 +142,12 @@
         <section class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
             <div class="container ">
                 <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
-                    <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
+                    <div class="mt-5 col-lg-3 col-md-12 col-sm-12">
                         <img class="img-fluid" src="public/images/about.png" alt="about me" />
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="row col-lg-9 col-md-12 col-sm-12">
 
-                        <div class=" card-body">
+                        <div class=" card-body col-lg-6 col-md-6 col-sm-12">
                             <div class="h4 mt-0 title">About</div>
                             <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
                             </p>
@@ -159,32 +157,30 @@
                                 showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
                                     More</a></p>
                         </div>
-
-                        <div>
-                            <div class="card-body">
-                                <div class="h4 mt-0 title">Basic Information</div>
-                                <div class="row">
-                                    <div class="col-sm-4"><span class="text-uppercase">Age:</span></div>
-                                    <div class="col-sm-8">24</div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-sm-4"><span class="text-uppercase">Email:</span></div>
-                                    <div class="col-sm-8">anthony@company.com</div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-sm-4"><span class="text-uppercase">Phone:</span></div>
-                                    <div class="col-sm-8">+1718-111-0011</div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-sm-4"><span class="text-uppercase">Address:</span></div>
-                                    <div class="col-sm-8">140, City Center, New York, U.S.A</div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-sm-4"><span class="text-uppercase">Language:</span></div>
-                                    <div class="col-sm-8">English, German, French</div>
-                                </div>
+                        <div class="card-body col-lg-6 col-md-6 col-sm-12">
+                            <div class="h4 mt-0 title">Basic Information</div>
+                            <div class="row">
+                                <div class="col-sm-4"><span class="text-uppercase">Age:</span></div>
+                                <div class="col-sm-8">24</div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-sm-4"><span class="text-uppercase">Email:</span></div>
+                                <div class="col-sm-8">anthony@company.com</div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-sm-4"><span class="text-uppercase">Phone:</span></div>
+                                <div class="col-sm-8">+1718-111-0011</div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-sm-4"><span class="text-uppercase">Address:</span></div>
+                                <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-sm-4"><span class="text-uppercase">Language:</span></div>
+                                <div class="col-sm-8">English, German, French</div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
