--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-warning" id="mainNav">
             <div class="container">
                 <a href="/" class="navbar-brand"></a>
-                <button class="navbar-toggler float-right" type="button" data-toggle="collapse"
+                <button class="navbar-toggler float-right bg-light" type="button" data-toggle="collapse"
                     data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
