--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- ======= Header Section ======= -->
 
     <header id="header" class="section ">
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg " id="mainNav">
             <div class="container">
-                <a href="#header" class="logo navbar-brand"></a>
+                <a href="/" class="navbar-brand"></a>
                 <button class="navbar-toggler float-right " type="button" data-toggle="collapse"
                     data-target="#navigation">
                     <i class="fas fa-bars"></i>
