--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <!-- ======= Header Section ======= -->
 
     <header id="header" class="section ">
-        <nav class="navbar navbar-expand-lg " id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning" id="mainNav">
             <div class="container">
-                <a href="#header" class="logo navbar-brand"></a>
-                <button class="navbar-toggler float-right " type="button" data-toggle="collapse"
+                <a href="/" class="navbar-brand"></a>
+                <button class="navbar-toggler float-right" type="button" data-toggle="collapse"
                     data-target="#navigation">
-                    <i class="fas fa-bars"></i>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
