--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header id="header" class="section ">
         <nav class="navbar navbar-expand-lg navbar-light bg-warning" id="mainNav">
             <div class="container">
-                <a href="/" class="navbar-brand"></a>
+                <a href="#header" class="logo navbar-brand"></a>
                 <button class="navbar-toggler float-right" type="button" data-toggle="collapse"
                     data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
