--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <header id="header" class="section ">
         <!-- <nav class="navbar navbar-expand-lg  " > -->
-            <nav class="navbar navbar-expand-lg  " >
+            <nav class="navbar navbar-expand-lg  bg-faded" >
             
             <div class="container">
                 <a href="#header" class="logo navbar-brand"></a>
-                <button class="navbar-toggler float-right custom-toggler" type="button" data-toggle="collapse"
+                <button class="navbar-toggler float-right custom-toggler collapsed" type="button" data-toggle="collapse"
                     data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>                    
                 </button>
