--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
 
-
+    <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">  
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>  
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script> 
 
 
     <title>Oumaima Creation CV</title>
@@ -32,7 +34,7 @@
 
     <header id="header" class="section ">
         <!-- <nav class="navbar navbar-expand-lg  " > -->
-            <nav class="navbar navbar-expand-lg  bg-faded" >
+            <nav class="navbar navbar-expand-lg  " >
             
             <div class="container">
                 <a href="#header" class="logo navbar-brand"></a>
@@ -768,10 +770,10 @@
 
 
     <!-- All script -->
-    <script src="public/vendors/jquery/jquery.min.js"></script>
+    <!-- <script src="public/vendors/jquery/jquery.min.js"></script> -->
     <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="public/vendors/jquery/jquery.easing.min.js"></script>
+    <!-- <script src="public/vendors/jquery/jquery.easing.min.js"></script> -->
     <!-- à supprimer en cas de non inutilité -->
     <!-- <script src="public/vendors/jquery/jquery.waypoints.min.js"></script> -->
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
