--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                     </div>
                     <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El
                         Obayid</span>
-                    <h3 class="category">Intégratrice web, Développeuse Wordpress, et
-                        webdesigner
+                    <h3 class="category">Web integrator, Wordpress developer, and web designer
                     </h3>
                     <div class="container twoButtons">
                         <div>
@@ -142,42 +141,41 @@
         <section class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
             <div class="container ">
                 <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
-                    <div class="mt-5 col-lg-3 col-md-12 col-sm-12">
+                    <div class="mt-5 col-lg-6 col-md-12 col-sm-12">
                         <img class="img-fluid" src="public/images/about.png" alt="about me" />
                     </div>
-                    <div class="row col-lg-9 col-md-12 col-sm-12">
+                    <div class=" col-lg-6 col-md-12 col-sm-12">
 
-                        <div class=" card-body col-lg-6 col-md-6 col-sm-12">
+                        <div class=" card-body col-lg-12 col-md-6 col-sm-12">
                             <div class="h4 mt-0 title">About</div>
-                            <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
-                            </p>
-                            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4,
-                                Now
-                                UI Kit and FontAwesome, this modern and responsive design template is perfect to
-                                showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
-                                    More</a></p>
+                            <p>Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional Code.
+                            </p>                            
                         </div>
-                        <div class="card-body col-lg-6 col-md-6 col-sm-12">
+                        <div class="card-body col-lg-12 col-md-6 col-sm-12 ">
                             <div class="h4 mt-0 title">Basic Information</div>
                             <div class="row">
+                                <div class="col-sm-4"><span class="text-uppercase">Name:</span></div>
+                                <div class="col-sm-8">Oumaima El Obayid</div>
+                            </div>
+                            <div class="row mt-3">
                                 <div class="col-sm-4"><span class="text-uppercase">Age:</span></div>
-                                <div class="col-sm-8">24</div>
+                                <div class="col-sm-8">25</div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-4"><span class="text-uppercase">Email:</span></div>
-                                <div class="col-sm-8">anthony@company.com</div>
+                                <div class="col-sm-8">Obayid@company.com</div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-4"><span class="text-uppercase">Phone:</span></div>
-                                <div class="col-sm-8">+1718-111-0011</div>
+                                <div class="col-sm-8">+​212 537 71 90 00</div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-4"><span class="text-uppercase">Address:</span></div>
-                                <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+                                <div class="col-sm-8">25, Daoudia, Marrakech, Maroc</div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-sm-4"><span class="text-uppercase">Language:</span></div>
-                                <div class="col-sm-8">English, German, French</div>
+                                <div class="col-sm-8">English, French, Arabe</div>
                             </div>
                         </div>
 
