--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="mt-5 col-lg-6 col-md-12 col-sm-12">
                         <img class="img-fluid" src="public/images/about.png" alt="about me" />
                     </div>
-                    <div class=" col-lg-6 col-md-12 col-sm-12">
+                    <div class="row col-lg-6 col-md-12 col-sm-12">
 
                         <div class=" card-body col-lg-12 col-md-6 col-sm-12">
                             <div class="h4 mt-0 title">About</div>
