--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
                         <div class=" card-body col-lg-12 col-md-6 col-sm-12">
-                            <div class="h4 mt-0 title">About</div>
-                            <p>Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional Code.
+                            <div class=" h4 mt-0 title">About</div>
+                            <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional Code.
                             </p>                            
                         </div>
                         <div class="card-body col-lg-12 col-md-6 col-sm-12 ">
@@ -190,9 +190,9 @@
         <section class="section" id="skills">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class=" card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <ul class="flexrow flex-wrap skills-bar-container">
-                        <li class="col-lg-6 col-md-6 col-sm-12">
+                <div class="flexrow card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <ul class="flexrow flex-wrap skills-bar-container ">
+                        <li class="col-lg-6 col-md-6 col-sm-12  ">
                             <div class="progressbar-title">
                                 <span>HTML5</span>
                                 <span class="percent">98%</span>
