--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                     </div>
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
-                        <div class=" card-body col-lg-12 col-md-6 col-sm-12">
+                        <div class=" card-body col-12">
                             <div class=" h4 mt-0 title">About</div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End
                                 Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic,
                                 Responsive and User Friendly UI, Developed by Modular, Scalable and Functional Code.
                             </p>
                         </div>
-                        <div class="card-body col-lg-12 col-md-6 col-sm-12 ">
+                        <div class="card-body col-12 ">
                             <div class="h4 mt-0 title">Basic Information</div>
                             <div class="row">
                                 <div class="col-sm-4"><span class="text-uppercase">Name:</span></div>
@@ -192,10 +192,9 @@
         <section class="section" id="skills">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class=" card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <ul class="flexrow  skills-bar-container ">
-                        <div class=" blockskills" >
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                <div class="flexrow justify-content-center card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>HTML5</span>
                                     <span class="percent">98%</span>
@@ -204,7 +203,7 @@
                                     <span class="progressbar " id="progress-html"></span>
                                 </div>
                             </li>
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>CSS3 / SASS</span>
                                     <span class="percent">95%</span>
@@ -213,8 +212,7 @@
                                     <span class="progressbar " id="progress-css"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>JAVASCRIPT / JQUERY</span>
                                     <span class="percent">75%</span>
@@ -223,8 +221,7 @@
                                     <span class="progressbar " id="progress-javascript"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>BOOTSTRAP</span>
                                     <span class="percent">80%</span>
@@ -233,8 +230,7 @@
                                     <span class="progressbar " id="progress-bootstrap"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>PHOTOSHOP</span>
                                     <span class="percent">65%</span>
@@ -242,10 +238,10 @@
                                 <div class="bar-container">
                                     <span class="progressbar " id="progress-photoshop"></span>
                                 </div>
-                            </li>
-                        </div>
-                        <div class="blockskills ">
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            </li>                        
+                    </ul>
+                    <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>REACT JS</span>
                                     <span class="percent">65%</span>
@@ -254,8 +250,7 @@
                                     <span class="progressbar " id="progress-react"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>PHP / MYSQL</span>
                                     <span class="percent">70%</span>
@@ -264,7 +259,7 @@
                                     <span class="progressbar " id="progress-php"></span>
                                 </div>
                             </li>
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>WORDPRESS</span>
                                     <span class="percent">70%</span>
@@ -273,8 +268,7 @@
                                     <span class="progressbar " id="progress-wordpress"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>ASP.NET</span>
                                     <span class="percent">50%</span>
@@ -283,8 +277,7 @@
                                     <span class="progressbar " id="progress-asp"></span>
                                 </div>
                             </li>
-
-                            <li class=" col-lg-12 col-md-6 col-sm-12">
+                            <li class=" col-12">
                                 <div class="progressbar-title">
                                     <span>SGBD SQL</span>
                                     <span class="percent">65%</span>
@@ -293,8 +286,6 @@
                                     <span class="progressbar " id="progress-sql"></span>
                                 </div>
                             </li>
-                        </div>
-
                     </ul>
                 </div>
             </div>
